hands-on/networking/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: my-app
  name: my-app
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - image: nicolaka/netshoot
        imagePullPolicy: Always
        name: my-app
        command: ["sleep", "infinity"]
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: app
spec:
  type: NodePort
  selector:
    app: my-app
  ports:
    - port: 8080
      targetPort: 80
      nodePort: 30080
      nodePort: 30081
