hands-on/networking/middleware.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: my-middleware
  name: my-middleware
  namespace: middleware
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-middleware
  template:
    metadata:
      labels:
        app: my-middleware
    spec:
      containers:
      - image: nicolaka/netshoot
        name: my-middleware
        command: ["sleep", "infinity"]
---
apiVersion: v1
kind: Service
metadata:
  name: my-middleware-service
  namespace: middleware
spec:
  type: NodePort
  selector:
    app: my-middleware
  ports:
    - port: 8080
      targetPort: 80
      nodePort: 30083
