hands-on/networking/calico-policy.yaml
  # allow-app-ingress.yaml
  apiVersion: projectcalico.org/v3
  kind: NetworkPolicy
  metadata:
    name: allow-app-ingress
    namespace: default
  spec:
    selector: app == 'my-app'
    ingress:
    - action: Allow
      source:
        selector: role == 'frontend'
